--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "promptDelete": false,
   "trashOption": "local",
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "attachmentFolderPath": "attachments"
 }
